--- a/App.config
+++ b/App.config
@@ -5,7 +5,12 @@
     </startup>
 
   <appSettings>
-    <add key="Ruta_Entrdas_BB" value="C:\Users\adria\Documents\Visual Studio 2017\Projects\ProyectoExcel\Entradas_BB"/>
-    <add key="Ruta_Salidas_BB" value="C:\Users\adria\Documents\Visual Studio 2017\Projects\ProyectoExcel\Salidas_BB"/>
+    <add key="Ruta_Entradas_BB" value="C:\Users\adria\Documents\Visual Studio 2017\Projects\ProyectoExcel\Entradas_BB"/>
+    <add key="Ruta_Salidas_BB" value="C:\Users\adria\Documents\Visual Studio 2017\Projects\ProyectoExcel\Salidas_BB"/>    
+    <add key="NombreHojaExcel" value="Hoja1"/>
+    <add key="ExtensionExcelEntrada" value=".xls"/>
+    <add key="ExtensionExcelSalida" value=".xls"/>
   </appSettings>
+  
+ 
 </configuration>
