--- a/App.config
+++ b/App.config
@@ -8,8 +8,8 @@
     <add key="Ruta_Entradas_BB" value="C:\Users\adria\Documents\Visual Studio 2017\Projects\ProyectoExcel\Entradas_BB"/>
     <add key="Ruta_Salidas_BB" value="C:\Users\adria\Documents\Visual Studio 2017\Projects\ProyectoExcel\Salidas_BB"/>    
     <add key="NombreHojaExcel" value="Hoja1"/>
-    <add key="ExtensionExcelEntrada" value=".xls"/>
-    <add key="ExtensionExcelSalida" value=".xls"/>
+    <add key="ExtensionExcelEntrada" value=".xlsx"/>
+    <add key="ExtensionExcelSalida" value=".xlsx"/>
   </appSettings>
   
  
