Se ompleta método CrearExcelXLSX()

--- a/App.config
+++ b/App.config
@@ -11,6 +11,26 @@
     <add key="ExtensionExcelEntrada" value=".xlsx"/>
     <add key="ExtensionExcelSalida" value=".xlsx"/>
   </appSettings>
+
+
   
- 
+  <!--
+  <configSections>
+    <section name="Configuracion" type="System.Configuration.NameValueSectionHandler" />
+    <section name="Reporte" type="System.Configuration.NameValueSectionHandler" />
+  </configSections>
+  <Configuracion>
+    <add key="Ruta_Entradas_BB" value="C:\Users\adria\Documents\Visual Studio 2017\Projects\ProyectoExcel\Entradas_BB"/>
+    <add key="Ruta_Salidas_BB" value="C:\Users\adria\Documents\Visual Studio 2017\Projects\ProyectoExcel\Salidas_BB"/>    
+    <add key="NombreHojaExcel" value="Hoja1"/>
+    <add key="ExtensionExcelEntrada" value=".xlsx"/>
+    <add key="ExtensionExcelSalida" value=".xlsx"/>
+  </Configuracion>
+  
+  <Configuracion>
+    <add key="Columna1" value="Crédito" />
+    <add key="Columna2" value="Línea" />
+  </Configuracion>
+ -->
+
 </configuration>
